services/externalname.yaml
kind: Service
apiVersion: v1
metadata:
  name: clusterip-demo-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 443
  type: ExternalName
  externalName: remote.server.url.com
